# reasonchip

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  release.sh  requirements.txt
.github/: FUNDING.yml
.github/workflows/: pr-main.yml  release-package.yml  release-website.yml
examples/: README.md
examples/chatbot/: broker.sh  dispatch.sh  run.sh  serve.sh  variables.json  worker.sh
examples/chatbot/workflows/: app.py
examples/chatbot_adjusting_personality/: README.md  _params.yml  _secrets.yml  chat.sh  entry.yml  handle_message.yml  init_user.yml  update_personality.yml
examples/document_code_base/: README.md  document_code_base.py
examples/document_code_base/workflows/: document_file.yml  document_path.yml
src/reasonchip/: README.md  __init__.py
src/reasonchip/chips/reasoning/: openai.py
src/reasonchip/chipsets/: README.md  http.py  redis.py  telegram.py
src/reasonchip/chipsets/reasonchip/: README.md  async.py  debug.py  streams.py
src/reasonchip/cli/: README.md  reasonchip.py
src/reasonchip/core/: README.md  exceptions.py
src/reasonchip/data/: README.md
src/reasonchip/net/: README.md  amqp_client.py  amqp_consumer.py  amqp_producer.py  protocol.py  simple_task.py  task_manager.py
src/reasonchip/orm/: go.sh  inspector.py  main.py  manager.py  models.py  rox.py
src/reasonchip/utils/: README.md  local_runner.py
website/reasonchip/: README.md  process_chipset.py  rebuild.sh  serve.sh
website/reasonchip/src/: .gitignore  _index.md  hugo.toml
website/reasonchip/templates/: chipset.j2
(+134 files in other folders)
