[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "reasonchip"
version = "0.0.1"
authors = [
  { name="ReasonChip", email="support@reasonchip.io" },
]
description = "Agentic workflow tools"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
	'Development Status :: 4 - Beta',
	'Intended Audience :: Developers',
	'Programming Language :: Python :: 3',
	'License :: OSI Approved :: GNU General Public License (GPLv3)',
	'Operating System :: OS Independent',
	'Topic :: Software Development :: Libraries',
	'Topic :: System :: Distributed Computing',
]

[project.urls]
Homepage = "https://www.reasonchip.io/"
GitHub = "https://github.com/SouthPatron/reasonchip"
Documentation = "https://www.reasonchip.io/docs/"
